[package]
name = "adbf_derive_rs"
version = "0.1.0"
authors = ["nattapongs <nattapong.sirilappanich2@ibm.com>"]
edition = "2018"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adbf_rs = {path="../adbf_rs"}
chrono = {version="^0.4"}
futures = {version="^0.3"}
encoding_rs = {version="^0.8"}
proc-macro2 = {version="^1.0"}
proc_macro_roids = {version="^0.6"}
syn = {version="^1.0"}
quote = {version="^1.0"}